# fs-data-sink

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  USAGE.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: example-kafka-to-local.ini  example-kafka-to-minio.yaml  example-kafka-to-s3-with-merge.yaml  example-kafka-to-s3.ini  example-kafka-to-s3.yaml  example-redis-to-hdfs.ini  example-redis-to-hdfs.yaml  example-redis-to-local.ini
scripts/: write_redis.sh
src/fs_data_sink/: __init__.py  cli.py  pipeline.py  types.py
src/fs_data_sink/config/: __init__.py  settings.py
src/fs_data_sink/sinks/: __init__.py  hdfs_sink.py  local_sink.py  s3_sink.py
src/fs_data_sink/sources/: __init__.py  kafka_source.py  redis_source.py
src/fs_data_sink/telemetry/: __init__.py  setup.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_file_merge.py  test_nonblocking_flush.py  test_pipeline_flush.py  test_redis_source.py  test_sink_buffering.py  test_topic_separation.py  test_types.py
